fixed mutable placement grid for ccs, reduced reserved space for production structures, reordered 'target position' code (but its still bad)